@startuml
skinparam style strictuml
hide methods

' Classes ajustadas segundo o modelo de domínio

class Prosumer {
  - prosumerId: String
  - community: Community
}

class Profile {
  - profileId: String
  - date: Date
  - profileTimeStamp: ProfileTimeStamp
  - profileLoad: float
  - soldEnergy: float
  - boughtEnergy: float
  - photovoltaicEnergyLoad: float
  - stateOfCharge: float
}

class User {
  - userId: String
  - userName: String
  - userEmail: String
  - userPassword: String
  - userPhone: String
  - userRole: String
}

class Administrator {
  - adminId: String
}

class CommunityManager {
  - communityManagerId: String
  - communiy: Community
}

class Battery {
  - batteryId: String
  - batteryName: String
  - maxCapacity: float
  - efficiency: float
  - maxChargeDischarge: float
}

class Community {
  - communityId: String
  - communityName: String
  - communityProsumerIds: List<String>
}

class Simulation {
  - simulationId: String
  - startDate: Date
  - endDate: Date
}

class Date {
  - value: String
}

class ProfileTimeStamp {
  - intervalOfTime: String
  - numberOfIntervals: int
}

' Relações corrigidas

Prosumer -->  Battery
Prosumer -->  Community
Prosumer --|> User

Profile -->  Prosumer
Profile -->  Simulation
Profile -->  ProfileTimeStamp
Profile --> Date

User <|-- Administrator
User <|-- CommunityManager

CommunityManager --> Community
Simulation --> Date

@enduml